--- a/Authenticator/Authenticator.vcxproj
+++ b/Authenticator/Authenticator.vcxproj
@@ -151,6 +151,10 @@ IF EXIST vendor\MYSQL\Release-windows-x86_64\lib64\libssl-1_1-x64.dll\ (xcopy /Q
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Commands\AuthenticateUserCommand.h" />
+    <ClInclude Include="src\Commands\CreatUserCommand.h" />
+    <ClInclude Include="src\Commands\IDatabaseCommand.h" />
+    <ClInclude Include="src\Networking\ServerManager\ServerManager.h" />
     <ClInclude Include="src\Database\API\AuthenticatorAPI.h" />
     <ClInclude Include="src\Database\DataStructs\AuthenticateUserData.h" />
     <ClInclude Include="src\Database\DataStructs\ConnectionInfo.h" />
@@ -168,6 +172,7 @@ IF EXIST vendor\MYSQL\Release-windows-x86_64\lib64\libssl-1_1-x64.dll\ (xcopy /Q
     <ClInclude Include="src\pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Networking\ServerManager\ServerManager.cpp" />
     <ClCompile Include="src\Database\API\AuthenticatorAPI.cpp" />
     <ClCompile Include="src\Database\Database\Database.cpp" />
     <ClCompile Include="src\Database\Response\DatabaseResponse.cpp" />
