--- a/Chat_Client/Chat_Client.vcxproj
+++ b/Chat_Client/Chat_Client.vcxproj
@@ -11,21 +11,21 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{E6F477D4-D296-A2AA-BB51-B6FEA79229FB}</ProjectGuid>
+    <ProjectGuid>{E348F7DC-4FFE-6FD2-D8F2-69A944A766D6}</ProjectGuid>
     <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>TwoNet</RootNamespace>
+    <RootNamespace>Chat_Client</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v143</PlatformToolset>
@@ -41,23 +41,25 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>lib\Debug-windows-x86_64\</OutDir>
-    <IntDir>bin-int\Debug-windows-x86_64\</IntDir>
-    <TargetName>TwoNet</TargetName>
-    <TargetExt>.lib</TargetExt>
+    <LinkIncremental>true</LinkIncremental>
+    <OutDir>..\bin\Debug-windows-x86_64\Chat_Client\</OutDir>
+    <IntDir>..\bin-int\Debug-windows-x86_64\Chat_Client\</IntDir>
+    <TargetName>Chat_Client</TargetName>
+    <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>lib\Release-windows-x86_64\</OutDir>
-    <IntDir>bin-int\Release-windows-x86_64\</IntDir>
-    <TargetName>TwoNet</TargetName>
-    <TargetExt>.lib</TargetExt>
+    <LinkIncremental>true</LinkIncremental>
+    <OutDir>..\bin\Release-windows-x86_64\Chat_Client\</OutDir>
+    <IntDir>..\bin-int\Release-windows-x86_64\Chat_Client\</IntDir>
+    <TargetName>Chat_Client</TargetName>
+    <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>tpch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>include\TwoNet;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;..\Authenticator\vendor\TwoNet\include;..\Authenticator\vendor\SPDLOG\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -65,38 +67,52 @@
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>TwoNet.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\Authenticator\vendor\TwoNet\lib\Debug-windows-x86_64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>tpch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>include\TwoNet;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;..\Authenticator\vendor\TwoNet\include;..\Authenticator\vendor\SPDLOG\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>TwoNet.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\Authenticator\vendor\TwoNet\lib\Release-windows-x86_64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="include\TwoNet\Buffer\Buffer.h" />
-    <ClInclude Include="include\TwoNet\Protocols\TwoProt.h" />
-    <ClInclude Include="include\TwoNet\Serialization\Serialization.h" />
-    <ClInclude Include="include\TwoNet\Utils\Utils.h" />
-    <ClInclude Include="include\TwoNet\tpch.h" />
+    <ClInclude Include="src\Debug\Assertion.h" />
+    <ClInclude Include="src\Debug\Log.h" />
+    <ClInclude Include="src\Networking\Client.h" />
+    <ClInclude Include="src\Networking\Networking.h" />
+    <ClInclude Include="src\Networking\Request.h" />
+    <ClInclude Include="src\StateMachine\State.h" />
+    <ClInclude Include="src\StateMachine\StateManager.h" />
+    <ClInclude Include="src\StateMachine\States\ConnectingState.h" />
+    <ClInclude Include="src\StateMachine\States\LobbyState.h" />
+    <ClInclude Include="src\StateMachine\States\RoomState.h" />
+    <ClInclude Include="src\pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Buffer.cpp" />
+    <ClCompile Include="src\Debug\Log.cpp" />
     <ClCompile Include="src\Main.cpp" />
-    <ClCompile Include="src\Serialization.cpp" />
-    <ClCompile Include="src\TwoProt.cpp" />
-    <ClCompile Include="src\tpch.cpp">
+    <ClCompile Include="src\Networking\Client.cpp" />
+    <ClCompile Include="src\Networking\Networking.cpp" />
+    <ClCompile Include="src\StateMachine\StateManager.cpp" />
+    <ClCompile Include="src\StateMachine\States\ConnectingState.cpp" />
+    <ClCompile Include="src\StateMachine\States\LobbyState.cpp" />
+    <ClCompile Include="src\StateMachine\States\RoomState.cpp" />
+    <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
